# CXX_List_vs_BST_vs_AVL

./: CMakeLists.txt  README.md  main.cpp
CPP Files/: AVL.cpp  BST.cpp  DataInsertion.cpp
Headers/: AVL.h  BST.h  DataInsertion.h
